# ItC-BP

./: CMakeLists.txt  README.md  matrix_oop.h
lab_num1/: CMakeLists.txt  main.cpp  matrix.cpp  matrix_oop.h  tests.cpp
lab_num2/: FirstExample.cpp  SecondExample.cpp  ThirdExample.cpp
lab_num3/: QueryInterface.cpp  QueryInterface.h  main.cpp
lab_num4/: QueryInterface2.cpp  QueryInterface2.h  main.cpp
lab_num5/: Interface.cpp  Interface.h  main.cpp
lab_num6/: CMakeCache.txt
lab_num6/src/: GUIDs.cpp  client1.cpp  client2.cpp  client3.cpp  cmpnt1.cpp  cmpnt1.def  cmpnt2.cpp  cmpnt2.def  cmpnt3.cpp  cmpnt3.def  create.cpp  create.h  iface.h
